<resources>
    <string name="app_name">Gin Box</string>
    <string name="empty_view_title_text">No inventory yet…</string>
    <string name="empty_view_subtitle_text">Add an item to get started!</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all items?</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_name">Unknown name</string>
    <string name="unknown_quantity">Unknown quantity</string>
    <string name="unknown_origin">Unknown origin</string>
    <string name="unknown_size">Unknown size</string>
    <string name="unknown_size_type">--</string>
    <string name="unknown_abv">Unknown ABV</string>
    <string name="unknown_purchase_price">Unknown purchase price</string>
    <string name="unknown_sale_price">Unknown sale price</string>
    <string name="unknown_spirit_type">Unknown spirit type</string>
    <string name="category_details">Details</string>
    <string name="category_spirit_type">Spirit type</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_origin">Country of origin</string>
    <string name="hint_item_size">Size</string>
    <string name="hint_item_abv">Alcohol by volume%</string>
    <string name="hint_item_purchase_price">Purchase price</string>
    <string name="hint_item_sale_price">Sale price</string>
    <string name="hint_item_supplier_name">Supplier name</string>
    <string name="hint_item_supplier_phone_number">Supplier phone number</string>
    <string name="spirit_type_unknown">Unknown</string>
    <string name="spirit_type_beer">Beer</string>
    <string name="spirit_type_wine">Wine</string>
    <string name="spirit_type_champagne">Champagne</string>
    <string name="spirit_type_gin">Gin</string>
    <string name="spirit_type_rum">Rum</string>
    <string name="spirit_type_tequila">Tequila</string>
    <string name="spirit_type_whiskey">Whiskey</string>
    <string name="spirit_type_vermouth">Vermouth</string>
    <string name="spirit_type_brandy">Brandy</string>
    <string name="spirit_type_cognac">Cognac</string>
    <string name="spirit_type_liqeur">Liqeur</string>
    <string name="spirit_type_vodka">Vodka</string>
    <string name="size_type_pack">pack</string>
    <string name="size_type_ml">mL</string>
    <string name="size_type_oz">oz</string>
    <string name="editor_insert_item_error">Error inserting item</string>
    <string name="editor_insert_item_success">Successfully inserted item</string>
    <string name="settings_title">Settings</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_warning_threshold_default">25</string>
    <string name="settings_warning_threshold_key">warning_threshold</string>
    <string name="settings_warning_threshold_label">Warning threshold %</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_theme_key">theme</string>
    <string name="settings_theme_light_label">Light theme</string>
    <string name="settings_theme_dark_label">Dark theme</string>
    <string name="settings_theme_light_value">AppThemeLight</string>
    <string name="settings_theme_dark_value">AppThemeDark</string>
    <string name="settings_theme_default">AppThemeLight</string>
    <string name="no_photo_available">No item photo available</string>
    <string name="error_required_name">Item name is required.</string>
    <string name="error_required_quantity">Quantity is required.</string>
    <string name="error_invalid_quantity">Invalid quantity.</string>
    <string name="error_required_origin">Country of origin is required.</string>
    <string name="error_required_size">Item size is required.</string>
    <string name="error_required_abv">ABV% is required.</string>
    <string name="error_required_purchase_price">Purchase price is required.</string>
    <string name="error_required_sale_price">Sale price is required.</string>
    <string name="error_required_supplier_name">Supplier name is required.</string>
    <string name="error_required_supplier_phone_number">Supplier phone number is required.</string>
    <string name="file_provider_path">com.bskup.ginbox.fileprovider</string>
    <string name="quantity_decreased">Quantity decreased</string>
    <string name="update_failed">Update failed</string>
    <string name="quantity_increased">Quantity increased</string>
    <string name="dial_positive_button">Yes, dial</string>
    <string name="delete_successful">Delete successful</string>
    <string name="delete_failed">Delete failed</string>
    <string name="update_successful">Update successful</string>
    <string name="discard_changes_message">Discard changes?</string>
    <string name="discard_changes_positive_button">Discard</string>
    <string name="discard_changes_negative_button">Keep editing</string>
    <string name="photo_saved">Photo saved</string>
    <string name="editor_title_new_item">New item</string>
    <string name="editor_title_edit_item">Edit Item</string>
    <string name="delete_photo_message">Are you sure you want to delete this photo?</string>
    <string name="expand_details">Expand Details</string>
    <string name="collapse_details">Collapse Details</string>
    <string name="expand_notes">Expand Notes</string>
    <string name="collapse_notes">Collapse Notes</string>
    <string name="hint_notes">Notes (Optional)</string>
    <string name="list_item_restock">Restock</string>
    <string name="hint_item_target_quantity">Quantity for full stock</string>
    <string name="editor_category_in_stock">In Stock:</string>
    <string name="editor_category_size">Size</string>
    <string name="editor_category_type">Type</string>
    <string name="editor_category_origin">Origin</string>
    <string name="editor_category_abv">ABV%</string>
    <string name="editor_category_purchase_price">Purchase price</string>
    <string name="editor_category_sale_price">Sale price</string>
    <string name="editor_category_supplier_name">Supplier name</string>
    <string name="editor_category_supplier_phone">Supplier phone</string>
    <string name="editor_category_target_quantity">Target quantity</string>
    <string name="editor_category_notes">Notes</string>
    <string name="editor_add_a_photo">Add a Photo</string>
    <string name="editor_restock_button_text">Restock</string>
    <string name="editor_collapse_details">Collapse Details</string>
    <string name="editor_expand_notes">Expand Notes</string>
    <string name="editor_collapse_notes">Collapse Notes</string>
    <string name="list_item_in_stock_text">In Stock</string>
    <string name="error_required_target_quantity">Target quantity is required</string>
    <string name="error_invalid_target_quantity">Invalid target quantity</string>
    <string name="editor_inventory_level_label">Inventory Level:</string>
    <string name="editor_inventory_percentage">40%</string>
    <string name="editor_restock_label">Restock: </string>
    <string name="editor_restock_cost">$1234.00 (100 @ $12.34)</string>
    <string name="intent_dial_uri_prefix">tel:</string>
    <string name="create_file_date_time_format">yyyyMMdd_HHmmss</string>
    <string name="create_file_name_prefix">JPEG_</string>
    <string name="create_file_name_divider">_</string>
    <string name="create_file_name_extension">.jpg</string>
    <string name="open_full_size_photo_intent_data_type">image/*</string>
    <string name="settings_privacy_policy_label">Privacy policy</string>
    <string name="settings_privacy_policy_key">privacy_policy</string>
    <string name="privacy_policy_url">https://bskup.github.io/privacypolicy.html</string>
    <string name="image_capture_cancelled">Image capture cancelled</string>

</resources>
