<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_warning_threshold_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_warning_threshold_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_warning_threshold_label"/>

    <ListPreference
        android:defaultValue="@string/settings_theme_default"
        android:entries="@array/settings_theme_labels"
        android:entryValues="@array/settings_theme_values"
        android:key="@string/settings_theme_key"
        android:title="@string/settings_theme_label"/>

    <Preference
        android:title="@string/settings_privacy_policy_label"
        android:key="@string/settings_privacy_policy_key"/>

</PreferenceScreen>